--- a/_layouts/Ruby.html
+++ b/_layouts/Ruby.html
@@ -51,7 +51,7 @@
         </a>
 
         <div class="site-links">
-          {% include site-links.html %}
+          
 		</div>
 
         <div id="search-box">
@@ -87,7 +87,7 @@
 <hr/>
 பதிவுற்ற நாள் {{ page.date | date_to_string }} | {{ page.tags }}
 <hr/>
-  <div id="content">
+  <!--div id="content">
 <b>
 	{{ page.description }}
 </b>
@@ -97,7 +97,7 @@
 <h3>தேடு சொற்கள்: </h3>
 
 {{ page.keywords }}
-</div>
+</div-->
 </div>
 <hr class="hidden-modern">
 
