--- a/_layouts/arial_index.html
+++ b/_layouts/arial_index.html
@@ -6,12 +6,13 @@
 -->
 <html>
 	<head>
-		<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/ie/v8.css" /><![endif]-->
-		{% seo %}
+		<title>{{site.title}}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/aerial/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/aerial/assets/css/noscript.css" /></noscript>		
+		<noscript><link rel="stylesheet" href="assets/aerial/assets/css/noscript.css" /></noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/ie/v8.css" /><![endif]-->
+		{% seo %}
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
