--- a/_layouts/Ruby_old.html
+++ b/_layouts/Ruby_old.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
-<!-- saved from url=(0029)https://www.ruby-lang.org/en/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
 
     
-    
+    <title>{{page.title}}</title>
     
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-
+	
+	<LINK href="assets/seamonkey/css/seven_7z_style.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="assets/Ruby_files/normalize.css">
     <link rel="stylesheet" type="text/css" href="assets/Ruby_files/main.css">
     <link rel="stylesheet" type="text/css" href="assets/Ruby_files/pygments.css">
     <link rel="stylesheet" type="text/css" href="assets/Ruby_files/mobile.css">
     <link rel="stylesheet" type="text/css" href="assets/Ruby_files/print.css">
     <link href="assets/Ruby_files/css" rel="stylesheet" type="text/css">
-    <link rel="canonical" href="https://thanithamizhakarathikalanjiyam.github.io/">
+
+	
+    
 
     <meta property="og:image" content="{{ site.baseurl }}/images/ttak-32.png"/>
 	<link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/images/ttak-32.png"/>
     
-    <link href="{{ site.baseurl }}/feed" rel="alternate" title="Recent News (RSS)" type="application/rss+xml">
+    <link href="feed" rel="alternate" title="Recent News (RSS)" type="application/rss+xml">
 
 
-    <script type="text/javascript" async="" src="assets/Ruby_files/ga.js"></script><script type="text/javascript" src="assets/Ruby_files/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/Ruby_files/page.js"></script>
-    
-    
-    <script type="text/javascript" src="assets/Ruby_files/examples.js"></script>
-    
+    <script type="text/javascript" async="" src="assets/Ruby_files/ga.js"></script>
+	<script type="text/javascript" src="assets/Ruby_files/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/Ruby_files/page.js"></script>   
+
+
+
+	<!--For Jtable -->
+
+	<!--For Jtable End-->
+	
+	
 <!--[if lte IE 8]><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/ie/v8.css" /><![endif]-->
 {% seo %}
-
-{% if site.tags != "" %}
-  {% include collecttags.html %}
-{% endif %} 
-
   </head>
 
   
 
-  <body id="home-page-layout">
+  <body>
     <div id="header">
       <div id="header_content" class="container">
         <a href= "{{site.url}}">
@@ -76,40 +78,41 @@
 
     <div id="page">
       
+	  
 <div id="intro-container">
   <div class="container">
-    <!--div id="intro-wrapper">
+    <div id="intro-wrapper">
   <div id="intro">
-    <h1>{{ site.title }}</h1>
+    <h1>Ruby is...</h1>
 
     <p>
-    {{ site.description }}
+    A dynamic, open source programming language with a focus on
+    simplicity and productivity. It has an elegant syntax that is
+    natural to read and easy to write.
     </p>
 
-    <a href="{{ site.url }}/release_notes" class="download-link">Download {{ site.short_name }}</a>
+    <a href="downloads/" class="download-link">Download Ruby</a>
     or
-    <a href="{{ site.url }}/about">Read More...</a>
+    <a href="about/">Read More...</a>
 
   </div>
-  <div id="code">
-<figure class="highlight"><pre><code class="language-ruby" data-lang="ruby"><span class="c1"># Output "I love Ruby"</span>
-<span class="n">say</span> <span class="o">=</span> <span class="s2">"I love Ruby"</span>
-<span class="nb">puts</span> <span class="n">say</span>
+  <div id="code"><noscript><div class="highlight"><pre><code class="ruby">
+    <span class="c1"># The famous Hello World</span>
+    <span class="c1"># Program is trivial in</span>
+    <span class="c1"># Ruby. Superfluous:</span>
+    <span class="c1">#</span>
+    <span class="c1"># * A &quot;main&quot; method</span>
+    <span class="c1"># * Newline</span>
+    <span class="c1"># * Semicolons</span>
+    <span class="c1">#</span>
+    <span class="c1"># Here is the Code:</span>
 
-<span class="c1"># Output "I *LOVE* RUBY"</span>
-<span class="n">say</span><span class="p">[</span><span class="s1">'love'</span><span class="p">]</span> <span class="o">=</span> <span class="s2">"*love*"</span>
-<span class="nb">puts</span> <span class="n">say</span><span class="p">.</span><span class="nf">upcase</span>
-
-<span class="c1"># Output "I *love* Ruby"</span>
-<span class="c1"># five times</span>
-<span class="mi">5</span><span class="p">.</span><span class="nf">times</span> <span class="p">{</span> <span class="nb">puts</span> <span class="n">say</span> <span class="p">}</span></code></pre></figure>
-
+    <span class="nb">puts</span> <span class="s2">&quot;Hello World!&quot;</span>
+  </code></pre></div></noscript></div>
 </div>
-</div-->
 
   </div>
 </div>
-
 
 
       <div id="main-wrapper" class="container">
@@ -118,13 +121,7 @@
   
 <h1>{{ page.title }}</h1>
 <hr/>
-பதிவுற்ற நாள் {{ page.date | date_to_string }} | 
-{% for tag in page.tags %}
-{% capture tag_name %}{{ tag }}{% endcapture %}
-<a href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
-{% endfor %}
-
-
+பதிவுற்ற நாள் {{ page.date | date_to_string }} | {{ page.tags }}
 <hr/>
   <div id="content">
 <b>
@@ -132,8 +129,6 @@
 </b>
 
 {{ page.content }}
-
-
 
 <h3>தேடு சொற்கள்: </h3>
 
@@ -144,6 +139,15 @@
 
 <div id="sidebar-wrapper">
   <div id="sidebar">
+    
+<div class="navigation">
+
+  <h3><strong>498A & DV Act</strong> Legal Terrorism In India</h3>
+<br/>
+<a href="false498a">  
+<img width="137" src="images/498a_legal_terrorism_in_india.jpg" alt="498a_legal_terrorism_in_india"/></a>
+<br/>
+</div>
 
 <div class="navigation">
   <h3><strong>களஞ்சியம்</strong>, மிகு எளிது!</h3>
@@ -216,16 +220,6 @@
 
     <h3>Syndicate</h3>
     <p><a href="feed">Recent News (RSS)</a></p>
-
-	    
-<div class="navigation">
-
-  <h3><strong>498A & DV Act</strong> Legal Terrorism In India</h3>
-<br/>
-<a href="false498a">  
-<img width="137" src="images/498a_legal_terrorism_in_india.jpg" alt="498a_legal_terrorism_in_india"/></a>
-<br/>
-</div>
 
 
   </div>
